# fried-stl

./: .gitignore  README.md  meson.build
include/frd/: algorithm.hpp  arithmetic.hpp  array.hpp  bit.hpp  concepts.hpp  defines.hpp  functional.hpp  interval.hpp  limits.hpp  math.hpp  memory.hpp  platform.hpp  ranges.hpp  span.hpp  tuple.hpp  type_traits.hpp  utility.hpp  vector.hpp
include/frd/bits/: arithmetic_base.hpp  concepts_base.hpp  functional_base.hpp  memory_base.hpp  ranges_base.hpp  ranges_iterators.hpp  ranges_operations.hpp  ranges_util.hpp  ranges_views.hpp  type_traits_base.hpp  utility_base.hpp  utility_discard.hpp
include/frd/bits/ranges/: access.hpp  adaptor.hpp  cached_iterator.hpp  counted.hpp  cycle_view.hpp  empty_view.hpp  interval.hpp  iterators.hpp  operations.hpp  repeat_view.hpp  reverse_view.hpp  view_base.hpp  zip_view.hpp
source/: main.cpp  meson.build
